--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Hello Coursera! Glad to enroll in this course</h1>
 </body>
 </html>
 
